# high-performance-computing

./: .gitignore  README.md
2019-hpc-i/ex1-diffiusion/: diffusionsolver.cpp
2019-hpc-i/ex3/: script.sh
2019-hpc-i/ex3/oja/: CMakeLists.txt  perceptron.cpp  perceptron.h
2019-hpc-i/ex3/pca/: cacheflusher.cpp
2019-hpc-i/ex3/results/data/: 2DOJA_data_reconstructed.txt  2DOJA_eig.txt  2DOJA_eigenvalueseries_2.csv  2DOJA_std.txt  2DPCA_PYTHON_components.txt  2DPCA_PYTHON_eig.txt  2DPCA_data_reduced.txt  facesOJA_eigenvalueseries_2_20.csv  facesOJA_eigenvalueseries_2_64.csv  facesOJA_eigenvalueseries_3.csv  facesOJA_eigenvalueseries_3_16.csv  facesOJA_eigenvalueseries_3_20.csv  facesOJA_eigenvalueseries_3_32.csv  facesOJA_eigenvalueseries_3_40.csv  facesOJA_eigenvalueseries_4_16.csv  facesOJA_eigenvalueseries_4_20.csv  facesOJA_eigenvalueseries_4_32.csv  facesOJA_eigenvalueseries_4_40.csv  facesOJA_eigenvalueseries_4_64.csv  facesOJA_eigenvalueseries_5.csv  facesOJA_eigenvalueseries_5_10.csv  facesOJA_eigenvalueseries_5_16.csv  facesOJA_eigenvalueseries_5_20.csv  facesOJA_eigenvalueseries_5_32.csv  facesOJA_eigenvalueseries_5_40.csv  facesOJA_eigenvalueseries_test.csv  faces_eigs_true.txt
2019-hpc-i/ex3/results/figures/: sanger's-rule-2d-eigenvalue-behavior.eps  sanger's-rule-eigenvalue-behavior-b--10.eps  sanger's-rule-eigenvalue-behavior-b--64.eps  sanger's-rule-eigenvalue-behavior-n--2-b-10.eps  sanger's-rule-eigenvalue-behavior-n--2-b-20.eps  sanger's-rule-eigenvalue-behavior-n--3.eps  sanger's-rule-eigenvalue-behavior-n--5-b-1.eps  sanger's-rule-eigenvalue-behavior-n--5-b-10.eps  sanger's-rule-eigenvalue-behavior-n--5-b-16.eps  sanger's-rule-eigenvalue-behavior-n--5-b-32.eps  sanger's-rule-eigenvalue-behavior-n--5-b-40.eps  sanger's-rule-eigenvalue-behavior-n--5.eps  sangers-rule-eigenvalue-behavior-n--2-b-64.eps  sangers-rule-eigenvalue-behavior-n--3-b-10.eps  sangers-rule-eigenvalue-behavior-n--3-b-16.eps  sangers-rule-eigenvalue-behavior-n--3-b-64.eps  sangers-rule-faces-eigenvalue-behavior.eps
2019-hpc-i/ex3/results/matlab/: plotEigenvalueSeries.m
2019-hpc-i/ex4_diffusion2d/: CMakeLists.txt  main.cpp  timer.h
2019-hpc-i/ex5_particles/: ArrayOfParticles.h  CMakeLists.txt  SerialParticlesIterator.h  SerialParticlesIterator_parallel.h
2019-hpc-i/ex6_pse/: CMakeLists.txt
2020-hpc-ii/hw2/p1/: CMakeLists.txt  Makefile  auxiliary.cpp  main.cpp  wave.cpp  wave.h
2020-hpc-ii/hw2/p2/auxiliar/: auxiliar.cpp
2020-hpc-ii/hw2/p3/: Makefile  particle.cpp
2020-hpc-ii/hw3/: CMakeLists.txt  Makefile  wave.h
2020-hpc-ii/hw4/p1_p2/: SSA_CPU.cpp  main_ssa_test.cpp
2020-hpc-ii/hw4/p3/: producerConsumer.cpp
2020-hpc-ii/hw5/p2/: nbody_b.cu  nbody_c.cu  nbody_d.cu
2020-hpc-ii/hw6/p1/: reduction_sum.h
2020-hpc-ii/hw6/p2/src/: kernels.cu
ex1-diffiusion/: CMakeLists.txt  cacheflusher.h  diffusionsolver.cpp  diffusionsolver.h  main.cpp
ex2_brownian_motion/: CMakeLists.txt  main.cpp
ex3/code/: perceptron.h  utils.cpp  utils.h
ex3/oja/: CMakeLists.txt  main.cpp  perceptron.cpp  perceptron.h
ex3/pca/: CMakeLists.txt  cacheflusher.h  main.cpp
ex3/results/: plot_result.py
ex3/results/data/: 2DOJA_components.txt  2DOJA_data_reconstructed.txt  2DOJA_eig.txt  2DOJA_eigenvalueseries_test.csv  2DPCA_components.txt  2D_eigs_true.txt  facesOJA_components.txt  facesOJA_eig.txt  facesOJA_eigenvalueseries_1.csv  facesOJA_eigenvalueseries_1_20.csv  facesOJA_eigenvalueseries_2.csv  facesOJA_eigenvalueseries_2_10.csv  facesOJA_eigenvalueseries_2_16.csv  facesOJA_eigenvalueseries_2_32.csv  facesOJA_eigenvalueseries_2_40.csv  facesOJA_eigenvalueseries_3_10.csv  facesOJA_eigenvalueseries_3_64.csv  facesOJA_eigenvalueseries_4.csv  facesOJA_eigenvalueseries_4_10.csv  facesOJA_eigenvalueseries_5_64.csv  facesOJA_std.txt  facesPCA_PYTHON_components.txt  facesPCA_eig.txt
ex3/results/figures/: sanger's-rule-eigenvalue-behavior-b--16.eps  sanger's-rule-eigenvalue-behavior-b--20.eps  sanger's-rule-eigenvalue-behavior-b--32.eps  sanger's-rule-eigenvalue-behavior-b--40.eps  sanger's-rule-eigenvalue-behavior-n--2-b-1.eps  sanger's-rule-eigenvalue-behavior-n--2-b-16.eps  sanger's-rule-eigenvalue-behavior-n--2-b-32.eps  sanger's-rule-eigenvalue-behavior-n--2-b-40.eps  sanger's-rule-eigenvalue-behavior-n--2-b-64.eps  sanger's-rule-eigenvalue-behavior-n--2.eps  sanger's-rule-eigenvalue-behavior-n--4.eps  sanger's-rule-eigenvalue-behavior-n--5-b-20.eps  sanger's-rule-eigenvalue-behavior-n--5-b-64.eps  sanger's-rule-eigenvalue-behavior.eps  sangers-rule-eigenvalue-behavior-n--2-b-10.eps  sangers-rule-eigenvalue-behavior-n--2-b-16.eps  sangers-rule-eigenvalue-behavior-n--2-b-20.eps  sangers-rule-eigenvalue-behavior-n--2-b-32.eps  sangers-rule-eigenvalue-behavior-n--2-b-40.eps  sangers-rule-eigenvalue-behavior-n--3-b-20.eps  sangers-rule-eigenvalue-behavior-n--3-b-32.eps  sangers-rule-eigenvalue-behavior-n--3-b-40.eps
ex3_pca/: CMakeLists.txt  main.cpp
ex3_pca/code/: utils.cpp
ex3_pca/results/: plot_result.py
ex3_pca/results/data/: 2DPCA_components.txt  2DPCA_data_reconstructed.txt  2DPCA_data_reduced.txt  2DPCA_eig.txt  facesPCA_PYTHON_eig.txt  facesPCA_components.txt  facesPCA_data_reduced.txt
ex4_diffusion2d/: CMakeLists.txt  diffusion2d.cpp  diffusion2d.h  main.cpp
ex5_particles/: CMakeLists.txt  Profiler.h  SerialParticlesIterator.h  main.cpp  main_mpi.cpp
ex6_adi/: CMakeLists.txt  diffusionADI.cpp
ex6_pse/: pse2d.cpp
hw2/p1/: auxiliary.cpp  wave.cpp  wave.h
hw2/p2/: cannon.cpp
hw2/p3/: particle.cpp
hw2/skeleton/p1/: auxiliary.cpp  wave.cpp
hw2/skeleton/p2/: Makefile  cannon.cpp
hw3/: auxiliary.cpp  wave.cpp
hw4/p1_p2/: Makefile  SSA_CPU.cpp  ssa_test
hw4/p1_p2/includes/: SSA_CPU.hpp  objective.hpp
hw4/p3/: Makefile  config.src  divideAndConquer.cpp  producerConsumer.cpp  sequential.cpp
hw5/p1/: benchmarks_a.cu  benchmarks_b.cu  benchmarks_c.cu  utils.h
hw5/p2/: nbody_a.cu  nbody_b.cu  nbody_c.cu  nbody_d.cu
hw5/p3/: electrostatics.cu
hw6/p1/: reduction_argmax.cu  reduction_sum.cu
hw6/p2/src/: kernels.cu  kernels.h  ssa.cu
hw6/p3/: overlap.cu
